err/stratuslab-client.err
Listing '.'...
Listing './Scripts'...
Listing './bin'...
Listing './conf'...
Listing './include'...
Listing './java'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/stratuslab'...
Compiling './lib/python3.5/site-packages/stratuslab/CommandBase.py'...
***   File "./lib/python3.5/site-packages/stratuslab/CommandBase.py", line 50
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stratuslab/ConfigHolder.py'...
***   File "./lib/python3.5/site-packages/stratuslab/ConfigHolder.py", line 213
    except ConfigParser.ParsingError, ex:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stratuslab/Creator.py'...
***   File "./lib/python3.5/site-packages/stratuslab/Creator.py", line 230
    except ExecutionException, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stratuslab/FileAppender.py'...
***   File "./lib/python3.5/site-packages/stratuslab/FileAppender.py", line 84
    os.chmod(self.filename, 0755)
                               ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/stratuslab/HttpClient.py'...
***   File "./lib/python3.5/site-packages/stratuslab/HttpClient.py", line 249
    except ClientException, ex:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stratuslab/ManifestInfo.py'...
***   File "./lib/python3.5/site-packages/stratuslab/ManifestInfo.py", line 161
    except SyntaxError, ex:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stratuslab/Monitor.py'...
***   File "./lib/python3.5/site-packages/stratuslab/Monitor.py", line 297
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stratuslab/Testor.py'...
***   File "./lib/python3.5/site-packages/stratuslab/Testor.py", line 161
    except OneException, ex:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stratuslab/Util.py'...
***   File "./lib/python3.5/site-packages/stratuslab/Util.py", line 514
    except ImportError, ex:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/stratuslab/api'...
Listing './lib/python3.5/site-packages/stratuslab/cloud'...
Listing './lib/python3.5/site-packages/stratuslab/cloudinit'...
Listing './lib/python3.5/site-packages/stratuslab/commandbase'...
Listing './lib/python3.5/site-packages/stratuslab/controller'...
Compiling './lib/python3.5/site-packages/stratuslab/controller/util.py'...
***   File "./lib/python3.5/site-packages/stratuslab/controller/util.py", line 61
    print cb_cfg
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/stratuslab/image'...
Compiling './lib/python3.5/site-packages/stratuslab/image/Image.py'...
***   File "./lib/python3.5/site-packages/stratuslab/image/Image.py", line 80
    except (Exceptions.ValidationException, Exceptions.ExecutionException), ex:
                                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/stratuslab/marketplace'...
Compiling './lib/python3.5/site-packages/stratuslab/marketplace/ManifestDownloader.py'...
***   File "./lib/python3.5/site-packages/stratuslab/marketplace/ManifestDownloader.py", line 99
    except ExecutionException, ex:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stratuslab/marketplace/Uploader.py'...
***   File "./lib/python3.5/site-packages/stratuslab/marketplace/Uploader.py", line 62
    except ClientException, ex:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/stratuslab/pat'...
Compiling './lib/python3.5/site-packages/stratuslab/pat/Client.py'...
***   File "./lib/python3.5/site-packages/stratuslab/pat/Client.py", line 58
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stratuslab/pat/Service.py'...
***   File "./lib/python3.5/site-packages/stratuslab/pat/Service.py", line 50
    print "Content-type: application/json\r\n\r\n"
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/stratuslab/system'...
Compiling './lib/python3.5/site-packages/stratuslab/system/BaseSystem.py'...
***   File "./lib/python3.5/site-packages/stratuslab/system/BaseSystem.py", line 296
    self.chmodCmd('%s/.ssh/id_rsa' % self.oneHome, 0600)
                                                      ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/stratuslab/system/centos.py'...
***   File "./lib/python3.5/site-packages/stratuslab/system/centos.py", line 279
    except Exceptions.ConfigurationException, ex:
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/stratuslab/vm_manager'...
Listing './lib/python3.5/site-packages/stratuslab/volume_manager'...
Compiling './lib/python3.5/site-packages/stratuslab/volume_manager/PersistentDisk.py'...
***   File "./lib/python3.5/site-packages/stratuslab/volume_manager/PersistentDisk.py", line 193
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/stratuslab_client-14.6.0.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
Listing './share/template'...
Listing './share/vm'...
